Bug 61954 - [bisected Ironlake]performance of openarena-0.8.8 reduce to frozen
Summary: [bisected Ironlake]performance of openarena-0.8.8 reduce to frozen
Status: CLOSED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium major
Assignee: Eric Anholt
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-07 10:01 UTC by ye.tian
Modified: 2015-05-20 01:25 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log (24.01 KB, text/plain)
2013-03-07 10:01 UTC, ye.tian
Details

Description ye.tian 2013-03-07 10:01:03 UTC
Created attachment 76101 [details]
Xorg.0.log

System Environment:       
----------------------------------------------
Platform:IronLake
Arch: x86_64
Libdrm:	(master)libdrm-2.4.42-4-g41fc2cc8a98a8d02ea7d3635d3103f7dd371de10
Mesa:  (master)88b20d58344ed336b146799c0bf1149a932dc2d7
Xserver:(master)xorg-server-1.14.0
Xf86_video_intel: (master)2.21.3-79-g779fc0b20c382e572eb41d3cbf3d639e4eb77874
Cairo:	(master)0dac37c41473deafa4a2f154187c5c3d08b07c91
Libva:	(staging)dac0df7d78b67836671f521996d9c60a89254fa8
Libva_intel_driver:  (staging)7d34921055b21f195cea5346210f86f8292db282
Kernel:	(drm-intel-nightly) 5c08d91c86fd2788c377c3e565b72bde0c9ee569

Bug detailed description:
----------------------------------------------
Performance of openarena-0.8.8 reduce to frozen(~1fps) in xinit and gnome-session on Ironlake. The problem doesn't exist on IVB. Please see Xorg.0.log attached.

It's meas regression. By bisected, show that e15c21a95 is the first bad commit.

commit e15c21a957b62ab856ab286e8253dd1151a3386e
Author: Eric Anholt <eric@anholt.net>
Date:   Fri Feb 15 07:41:42 2013 -0800

    i965: Make sRGB-capable framebuffers by default.


Reproduce steps:
---------------------------------------------
1, xinit&
2,  vblank_mode=0 ./openarena.x86_64 +exec pts-openarena-088 +set r_mode -1 +set r_fullscreen 1 +set r_customWidth 1920 +set r_customHeight 1080
Comment 1 ye.tian 2013-03-11 02:33:12 UTC
The problem also exists on nexuiz.
Comment 2 meng 2013-03-11 02:40:27 UTC
The problem doesn't exist on IVB.
Comment 3 meng 2013-03-25 05:09:59 UTC
Ian, can you reproduce it?
Comment 4 Kenneth Graunke 2013-04-04 04:43:59 UTC
Works fine for me...
Comment 5 ye.tian 2013-04-12 07:05:04 UTC
The problem still exists below environment:
--------------------------------------------
Libdrm:	(master)libdrm-2.4.43-5-gb7bb9e929786eb8bae86cf50f54dcb94bfa7ad46
Mesa:	(master)cb12bf7606116e473bf19aee84582b4cee7f895d
Xserver:(master)xorg-server-1.14.0-52-gecf62755086fd65898998d5a509aee5f29a9583d
Xf86_video_intel:(master)2.21.6-9-gafe61281d8f92d6eb841e2522ab18e0d2fe73773
Cairo:(master)a64ce09715162c57d6e4b6a460d426af1d443cdc
Libva:(staging)5ec25c3d563d9ebd479a5ff978afe0a32f9cc00b
Libva_intel_driver:(staging)1fd62ffd336293dce7d091bcea8399a40ccea21e
Kernel:	(drm-intel-nightly) 524d90c616e56dcd9b64432a68f6013bd1e82811

OS
----------------
Fedora 16/17 
gnome-session or X raw

Hardware:
---------------------------
Piketon# 
Intel(R) Core(TM) i5 CPU 650 @ 3.20GHz
00:00.0 Host bridge: Intel Corporation Core Processor DRAM Controller (rev 12)
00:02.0 VGA compatible controller: Intel Corporation Core Processor Integrated Graphics Controller (rev 12)

Calpella#  
Intel(R) Core(TM) i5 CPU M 520  @ 2.40GHz
00:00.0 Host bridge: Intel Corporation Core Processor DRAM Controller (rev 02)
00:02.0 VGA compatible controller: Intel Corporation Core Processor Integrated Graphics Controller (rev 02)

Games
----------------
doom3 v1.3.1, nexuiz v2.5.2, openarena v0.8.8
Comment 6 Gordon Jin 2013-04-17 14:11:14 UTC
Ian, comments?
Comment 7 Ian Romanick 2013-04-17 21:40:16 UTC
Ken already said he can't reproduce it.  We've had no other reports of performance problems in openarena on any platform.
Comment 8 Shuang He 2013-04-23 10:48:40 UTC
Just compared bad and good build when running openarena
Seems the difference is:
    Good build, CopyTexSubImage2D seems to hit fast path
    Bad build, CopyTexSubImage2D seems to hit slow path (_mesa_meta_CopyTexSubImage)
Comment 9 Eric Anholt 2013-05-28 18:19:06 UTC
openarena only uses glCTSI on some graphics settings, which would explain why we didn't see it.  Patch is on the list now.
Comment 10 Eric Anholt 2013-05-29 01:18:20 UTC
And pushed:

commit 4dea6cf21557bcd3bbab3402e19e19f665d7e177
Author: Eric Anholt <eric@anholt.net>
Date:   Tue May 28 10:59:53 2013 -0700

    intel: Enable blit glCopyTexSubImage/glBlitFramebuffer with sRGB.
Comment 11 ye.tian 2013-05-29 01:22:49 UTC
(In reply to comment #10)
> And pushed:
> 
> commit 4dea6cf21557bcd3bbab3402e19e19f665d7e177
> Author: Eric Anholt <eric@anholt.net>
> Date:   Tue May 28 10:59:53 2013 -0700
> 
>     intel: Enable blit glCopyTexSubImage/glBlitFramebuffer with sRGB.


fixed it with the below patch, it works well.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.